app.css
svg {
  background-color: #FFF;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}

#subset {
  /*position: absolute;*/
  float:left;margin-right:.5em;
  width: 100%;
  height: 100%;
  padding: 10px;
  overflow:scroll;
  background-color: white;
  /*-webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);*/
  pointer-events: none;
}
			
#setx {
  /*position: absolute;*/
  float:left;margin-right:.5em;
  width: 100%;
  height: 100%;
  padding: 10px;
  overflow:scroll;
  background-color: white;
  /*-webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);*/
  pointer-events: none;
}
			
.hidden {
  display: none;
}

.arc path {
  stroke: #fff;
}

svg:not(.active):not(.ctrl) {
  cursor: crosshair;
}

path.link {
  fill: none;
  stroke: #000;
  stroke-width: 2px;
  cursor: default;
}

svg:not(.active):not(.ctrl) path.link {
  cursor: pointer;
}

path.link.selected {
  stroke-dasharray: 10,3;
}

path.link.dragline {
  pointer-events: none;
}

path.link.hidden {
  stroke-width: 0;
}

circle.node {
  stroke-width: 1.5px;
  cursor: pointer;
}

circle.node.reflexive {
  stroke: #000 !important;
  stroke-width: 4px;
}

text {
  font: 12px sans-serif;
  pointer-events: none;
}

text.id {
  text-anchor: middle;
  font-weight: bold;
}

.left {
    width: 33.3%;
    height:600px;
    box-sizing: border-box; margin: 0;
    overflow:scroll;
}
#main svg {
    width:100%;
    height:600px;
}
#main.svg-leftpanel svg, #main.svg-rightpanel svg {width: calc(100% - 300px);}
#main.svg-leftpanel.svg-rightpanel svg {width: calc(100% - 300px);}
/* #main.svg-marg-left svg {margin-left:0px;}
#main.svg-marg-right svg {margin-right:0px;} */

#option.navbar {
    padding:.5em;
    margin-bottom:0;
}
#option {
    position:relative;
}

div.popover.variables {
    max-width:none;
    width:300px;
}
div.popover.variables div.popover-content.form-horizontal {
    padding:0;
}

#leftpanel {
    /*float:left;*/
    border:1px solid #ADADAD;
    width: 300px;
}
#leftpanel button {border:1px solid #ADADAD; border-bottom-width:0; border-radius:0;}
#leftpanel #Left_Content_Area div {display:none;}
#leftpanel #Left_Content_Area div.active {display:block;}

#leftpanel.expandpanel {width:600px;}
#leftpanel.expandpanel div#toggleLpanelicon {left:598px;}

#leftpanel.closepanel {width:1px;}
#leftpanel.closepanel div.row-fluid.closepanel {display:none;}
#leftpanel div#toggleLpanelicon {width:32px;height:30px;position:absolute;top:calc(50% - 15px);left:298px;border:1px solid #ADADAD;border-width-left:0;}
#leftpanel.closepanel div#toggleLpanelicon {left:0px;}

#rightpanel {
  /*  right:0;
    position:absolute; */
    border:1px solid #ADADAD;
    width: 300px;
}
/*
#rightpanel:hover {
    width:50%;
}*/


#rightpanel div#toggleRpanelicon span.glyphicon {
    -moz-transform: rotate(-180deg);
    -webkit-transform: rotate(-180deg);
    transform: rotate(-180deg);
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
}

#rightpanel button {border:1px solid #ADADAD; border-bottom-width:0; border-radius:0;}
#rightpanel #Right_Content_Area div {display:none;}
#rightpanel #Right_Content_Area div.active {display:block;}

#rightpanel.expandpanel {width:600px;}
#rightpanel.expandpanel div#toggleRpanelicon {right:598px;}

#rightpanel.closepanel {width:1px;}
#rightpanel.closepanel div.row-fluid.closepanel {display:none;}
#rightpanel div#toggleRpanelicon {width:32px;height:30px;position:absolute;top:calc(50% - 15px);right:298px;border:1px solid #ADADAD;border-width-left:0;}
#rightpanel.closepanel div#toggleRpanelicon {right:0px;}

#main {
    /* float:left; */
    border:1px solid green;
    /* width: 85%; */
    width: 100%;
}

#sandbox {
    width:500px;
    height:400px;
}

/* p { padding-left: 15px; } */


path { 
    fill: steelblue;
}

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.brush .extent {
    stroke: #fff;
    fill-opacity: .125;
    shape-rendering: crispEdges;
}

.handle {
  fill: #fff;
  stroke: #000;
  stroke-opacity: .5;
  stroke-width: 1.25px;
  pointer-events: fill;
}


table, th, td
{
border-collapse: collapse;text-align:right;
}
td
{
padding:4px;
}

